--- a/src/app/index.html
+++ b/src/app/index.html
@@ -10,7 +10,8 @@
 <h1>Welcome to my {{title}}</h1>
 <nav>
     <a routerLink="/clock" routerLinkActive="active">Clock</a> |
-    <a routerLink="/choose-city" routerLinkActive="active">Select City</a>
+    <a routerLink="/choose-city" routerLinkActive="active">Select City</a> |
+    <a routerLink="/third" routerLinkActive="active">Third Component</a>
     </nav>
     <!-- Where router should display a view -->
     <router-outlet></router-outlet>`
