--- a/src/app/index.html
+++ b/src/app/index.html
@@ -14,6 +14,7 @@
     <a routerLink="/third" routerLinkActive="active">Third Component</a>
     </nav>
     <!-- Where router should display a view -->
-    <router-outlet></router-outlet>`
+    <router-outlet ></router-outlet>
+    <clock [city]="london"></clock>
 </body>
 </html>
