--- a/src/app/clock.html
+++ b/src/app/clock.html
@@ -1,4 +1,3 @@
 <h3>This is the Clock!</h3>
-<h4>{{now | date: "shortTime"}}</h4>
-<h3>Vancouver</h3>
-<h4>{{utc | timePipe: "vancouver" | date: "shortTime"}}</h4>
+<h3>{{city}}</h3>
+<h4>{{utc | timePipe: city | date: "shortTime"}}</h4>
