--- a/src/app/choose_city.html
+++ b/src/app/choose_city.html
@@ -4,4 +4,5 @@
     <option  *ngFor="let city of cities" [value]="city">{{city}}</option>
   </select>
   <h1>{{selectedcity}}</h1>
+  <clock [selectedcity]=selectedcity></clock>
 </form>
