--- a/src/app/clock.html
+++ b/src/app/clock.html
@@ -1,3 +1,4 @@
 <h3>This is the Clock!</h3>
 <h3>{{selectedcity}}</h3>
 <h4>{{utc | timePipe: selectedcity | date: "shortTime"}}</h4>
+<h4>{{utc | date: "shortTime"}}</h4>
