--- a/src/app/index.html
+++ b/src/app/index.html
@@ -14,6 +14,6 @@
     <a routerLink="/third" routerLinkActive="active">Third Component</a>
     </nav>
     <!-- Where router should display a view -->
-    <router-outlet ></router-outlet>
+    <router-outlet (childEvent)="selectedcity=$event"></router-outlet>
 </body>
 </html>
